# matome-antenna-django-backend

./: .env.global  README.md  docker-compose.yml
.github/workflows/: code-quality.yml  security.yml
Django/: .env.django  asgi.py  gunicorn.conf.py  pyproject.toml  settings.py
Django/matome_antenna_backend/: settings.py  urls copy.py  wsgi.py
