[tool.poetry]
name = "matome-antenna"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "matome_antenna"}]

[tool.poetry.dependencies]
python = "3.10.7"
Django = "^4.1.1"
gunicorn = "^20.1.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
django-debug-toolbar = "^3.7.0"
django-jazzmin = "^2.4.0"
django-boost = "^2.1"
djangorestframework = "^3.14.0"
django-filter = "^22.1"
django-request = "^1.6.1"
django-crontab = "^0.7.1"
django-dotenv = "^1.4.2"
django-axes = "^5.39.0"
django-extensions = "^3.2.1"
Werkzeug = "^2.2.2"
pyparsing = "^3.0.9"
django-dynamic-shields = "^0.2.1"
django-debreach = "^2.1.0"
mysqlclient = "^2.1.1"
django-feedparser = "^0.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-django = "^4.5.2"
black = "^22.10.0"
pytest-asyncio = "^0.19.0"
factory-boy = "^3.2.1"
pytest-cov = "^4.0.0"
pytest-profiling = "^1.7.0"
pytest-parallel = "^0.1.1"
lizard = "^1.17.10"
pip-licenses = "^3.5.4"
graphviz = "^0.20.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[pytest]
DJANGO_SETTINGS_MODULE = "settings"
pytest_plugins = ["pytest-django",'pytest_profiling']